My first CSS code

--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=500, initial-scale=1.0">
-    <title>Chinmay Patil</title>
-</head>
-<body>
-    <h1>Welcome to My Website</h1>
-    <p>My name is Chinmay Patil
-        <br>
-        I am a student at the Walchand College of Engineering, Sangli
-        <br>
-        I am pursuing my B.Tech in Information Technology
-        <br>
-        I am a Web Developer
-        <br>
-        I am a Competitive Programmer
-        <br>
-        I am a Machine Learning Enthusiast
-    </p>
 
-    <h2>My Skills</h2>
-    <ul>
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=500, initial-scale=1.0" />
+    <title>Chinmay Patil</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+
+
+
+  <body>
+    <h1>Welcome to My Website</h1>
+
+    <div class="intro_box">
+      <p>
+        My name is Chinmay Patil.
+        I am a student at the Walchand College of Engineering, Sangli. I am pursuing my B.Tech in Information Technology.
+        I am a Web Developer. 
+        I am a Competitive Programmer. 
+        I am a Machine Learning Enthusiast
+      </p>
+    </div>
+
+    <div>
+      <h2>My Skills</h2>
+      <ul>
         <li>Android Developement</li>
         <li>Web Developement</li>
         <li>Java</li>
         <li>C++</li>
         <li>Python</li>
         <li>Machine Learning</li>
-    </ul>
-    <img src="image.png" alt="Coffee" width="10" height="10">
-    <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a> <br>
-    <a href="https://github.com/ChinmayOnGithub">GitHub</a> <br>
-    <a href="https://leetcode.com/u/chinmaydpatil09/">Leetcode</a> <br>
-</body>
+      </ul>
+    </div>
+
+    <img src="image.png" alt="Coffee" width="10" height="10" />
+    <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a> <br />
+    <a href="https://github.com/ChinmayOnGithub">GitHub</a> <br />
+    <a href="https://leetcode.com/u/chinmaydpatil09/">Leetcode</a> <br />
+  </body>
 </html>
