--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=500, initial-scale=1.0" />
     <title>Chinmay Patil</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
   </head>
-
-
 
   <body>
     <h1>Welcome to My Website</h1>
 
     <div class="intro_box">
       <p>
-        My name is Chinmay Patil.
-        I am a student at the Walchand College of Engineering, Sangli. I am pursuing my B.Tech in Information Technology.
-        I am a Web Developer. 
-        I am a Competitive Programmer. 
-        I am a Machine Learning Enthusiast
+        My name is Chinmay Patil. I am a student at the Walchand College of
+        Engineering, Sangli. I am pursuing my B.Tech in Information Technology.
+        I am a Web Developer. I am a Competitive Programmer. I am a Machine
+        Learning Enthusiast
       </p>
     </div>
 
-    <div>
+    <div class="skill_box">
       <h2>My Skills</h2>
       <ul>
         <li>Android Developement</li>
@@ -36,9 +31,15 @@
       </ul>
     </div>
 
-    <img src="image.png" alt="Coffee" width="10" height="10" />
-    <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a> <br />
-    <a href="https://github.com/ChinmayOnGithub">GitHub</a> <br />
-    <a href="https://leetcode.com/u/chinmaydpatil09/">Leetcode</a> <br />
+    <div class="links_box">
+      <img src="image.png" alt="LinkedIn" width="10" height="10" />
+      <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a>
+
+      <img src="image.png" alt="GitHub" width="10" height="10" />
+      <a href="https://github.com/ChinmayOnGithub">GitHub</a>
+
+      <img src="image.png" alt="Leetcode" width="10" height="10" />
+      <a href="https://leetcode.com/u/chinmaydpatil09/">Leetcode</a>
+    </div>
   </body>
 </html>
