--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Welcome to My Website</h1>
 
-    <div class="intro_box">
+    <div class="box">
       <p>
         My name is Chinmay Patil. I am a student at the Walchand College of
         Engineering, Sangli. I am pursuing my B.Tech in Information Technology.
@@ -19,7 +19,7 @@
       </p>
     </div>
 
-    <div class="skill_box">
+    <div class="box">
       <h2>My Skills</h2>
       <ul>
         <li>Android Developement</li>
@@ -31,7 +31,7 @@
       </ul>
     </div>
 
-    <div class="links_box">
+    <div class="box">
       <img src="image.png" alt="LinkedIn" width="10" height="10" />
       <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a>
 
@@ -40,6 +40,19 @@
 
       <img src="image.png" alt="Leetcode" width="10" height="10" />
       <a href="https://leetcode.com/u/chinmaydpatil09/">Leetcode</a>
+    </div>
+
+    <div class="box">
+
+        <h2>My Project</h2>
+
+        <ol>
+            <li>Android Project</h3>
+                <p>
+                    This was very nice experience. We created an Android Application for our college, i.e. 'Attendace System'. Its was created with the inspiration from the Moodle Application. It basically integrates the changes from to the Moodle database in realtime. Its uses the Moodle Web services API for the API endpoints.
+                </p>
+        </ol>
+
     </div>
   </body>
 </html>
