--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <h1>Welcome to My Website</h1>
 
+    <div class="circle">
+        <img src="assets\images\profile.png" alt="My profile photo">
+    </div>
+
     <div class="box">
       <p>
         My name is Chinmay Patil. I am a student at the Walchand College of
@@ -44,7 +48,7 @@
 
     <div class="box">
 
-        <h2>My Project</h2>
+        <h2>My Projects</h2>
 
         <ol>
             <li>Android Project</h3>
