circular profile photo added

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     </div>
 
     <div class="box">
-      <img src="image.png" alt="LinkedIn" width="10" height="10" />
+      <img class="image" src="image.png" alt="LinkedIn" width="10" height="10" />
       <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a>
 
-      <img src="image.png" alt="GitHub" width="10" height="10" />
+      <img class="image" src="assets\images\github_black_logo_icon_147128.png" alt="GitHub" width="10" height="10" />
       <a href="https://github.com/ChinmayOnGithub">GitHub</a>
 
-      <img src="image.png" alt="Leetcode" width="10" height="10" />
+      <img class="image" src="assets/images/leetcode.png" alt="Leetcode" width="10" height="10" />
       <a href="https://leetcode.com/u/chinmaydpatil09/">Leetcode</a>
     </div>
 
