--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=500, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chinmay Patil</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -11,7 +11,7 @@
     <h1>Welcome to My Website</h1>
 
     <div class="circle">
-        <img src="assets\images\profile.png" alt="My profile photo">
+        <img src="assets/images/profile.png" alt="My profile photo">
     </div>
 
     <div class="box">
@@ -26,28 +26,28 @@
     <div class="box">
       <h2>My Skills</h2>
       <ul>
+        <li>MERN stack</li>
         <li>Android Developement</li>
-        <li>Web Developement</li>
-        <li>Java</li>
         <li>C++</li>
+        <li>Java</li>
+        <li>Kotlin</li>
         <li>Python</li>
-        <li>Machine Learning</li>
       </ul>
     </div>
-
-    <div class="box">
-      <img class="image" src="image.png" alt="LinkedIn" width="10" height="10" />
+    <!-- Links box -->
+    <div class="box" style="text-align: center;">
+      <img class="image_logo" src="image.png" alt="LinkedIn" width="10" height="10" />
       <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a>
 
-      <img class="image" src="assets\images\github_black_logo_icon_147128.png" alt="GitHub" width="10" height="10" />
+      <img class="image_logo" src="assets/images/github_black_logo_icon_147128.png" alt="GitHub" width="10" height="10" />
       <a href="https://github.com/ChinmayOnGithub">GitHub</a>
 
-      <img class="image" src="assets/images/leetcode.png" alt="Leetcode" width="10" height="10" />
+      <img class="image_logo" src="assets/images/leetcode.png" alt="Leetcode" width="10" height="10" />
       <a href="https://leetcode.com/u/chinmaydpatil09/">Leetcode</a>
     </div>
 
+    <!-- My projects box -->
     <div class="box">
-
         <h2>My Projects</h2>
 
         <ol>
@@ -56,6 +56,16 @@
                     This was very nice experience. We created an Android Application for our college, i.e. 'Attendace System'. Its was created with the inspiration from the Moodle Application. It basically integrates the changes from to the Moodle database in realtime. Its uses the Moodle Web services API for the API endpoints.
                 </p>
         </ol>
+
+    </div>
+
+<!-- Contact Me box -->
+    <div class="box">
+      <h2>Contact Me</h2>
+      <ul>
+        <li><a href="chinmaydpatil09@gmail.com">chinmaydpatil09@gmail.com</a></li>
+        <li>Walchand College of Engineering, Sangli</li>
+      </ul>
 
     </div>
   </body>
