--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chinmay Patil</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css" /> <!-- Linking external CSS file -->
   </head>
 
   <body>
     <h1>Welcome to My Website</h1>
 
     <div class="circle">
-        <img src="assets/images/profile.png" alt="My profile photo">
+        <img src="assets/images/profile.png" alt="My profile photo"> <!-- Displaying profile photo -->
     </div>
 
     <div class="box">
@@ -34,9 +34,10 @@
         <li>Python</li>
       </ul>
     </div>
+    
     <!-- Links box -->
-    <div class="box" style="text-align: center;">
-      <img class="image_logo" src="image.png" alt="LinkedIn" width="10" height="10" />
+    <div class="box link_box" style="text-align: center;">
+      <img class="image_logo" src="assets/images/linkedin.png" alt="GitHub" width="10" height="10" />
       <a href="https://www.linkedin.com/in/chinmaypatil462/">LinkedIn</a>
 
       <img class="image_logo" src="assets/images/github_black_logo_icon_147128.png" alt="GitHub" width="10" height="10" />
@@ -51,7 +52,7 @@
         <h2>My Projects</h2>
 
         <ol>
-            <li>Android Project</h3>
+            <li>Android Project</li>
                 <p>
                     This was very nice experience. We created an Android Application for our college, i.e. 'Attendace System'. Its was created with the inspiration from the Moodle Application. It basically integrates the changes from to the Moodle database in realtime. Its uses the Moodle Web services API for the API endpoints.
                 </p>
@@ -63,7 +64,7 @@
     <div class="box">
       <h2>Contact Me</h2>
       <ul>
-        <li><a href="chinmaydpatil09@gmail.com">chinmaydpatil09@gmail.com</a></li>
+        <li><a href="mailto:chinmaydpatil09@gmail.com">chinmaydpatil09@gmail.com</a></li>
         <li>Walchand College of Engineering, Sangli</li>
       </ul>
 
