--- a/index.html
+++ b/index.html
@@ -1,70 +1,140 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chinmay Patil</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-</head>
-
-<body>
-
-  <div class="box">
-    <h2 id="construction">⚠️ Under Construction...</h2>
-  </div>
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-</body>
-
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chinmay Patil - Under Construction</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <style>
+      body {
+        background-color: rgb(16, 2, 24);
+        color: rgb(235, 235, 235);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        text-align: center;
+        padding: 0 10px; /* Added for responsiveness */
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chinmay Patil - Under Construction</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <style>
-    body {
-      background-color: rgb(16, 2, 24);
-      color: rgb(235, 235, 235);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      text-align: center;
-    }
-    .box {
-      background-color: rgba(51, 40, 81, 0.8);
-      padding: 30px;
-      border: 1px solid rgb(179, 132, 206);
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-    h2 {
-      font-size: 2rem;
-    }
-  </style>
+      .box {
+        background-color: rgba(51, 40, 81, 0.8);
+        padding: 30px;
+        border: 1px solid rgb(179, 132, 206);
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        max-width: 600px;
+        width: 100%;
+      }
 
-</head>
+      h2 {
+        font-size: 2rem;
+      }
 
-<body>
-  <div class="box">
-    <h2 id="construction">⚠️ Under Construction...</h2>
-    <p>We're working hard to get things up and running. Please check back soon!</p>
-  </div>
+      /* Typing effect */
+      .typing {
+        font-size: 1.2rem;
+        white-space: normal;
+        overflow: hidden;
+        word-break: break-word;
+        animation: typing 3.5s steps(40, end);
+      }
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
-</body>
+      @keyframes typing {
+        from {
+          width: 0;
+        }
+        to {
+          width: 100%;
+        }
+      }
 
+      /* Add fade-in effect for the whole box */
+      .box {
+        opacity: 0;
+        animation: fadeIn 2s ease-in forwards;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      /* Media query for small screens */
+      @media (max-width: 600px) {
+        h2 {
+          font-size: 1.5rem;
+        }
+
+        .typing {
+          font-size: 1rem;
+        }
+
+        @media (max-width: 600px) {
+          .corner-gif {
+            width: 100px; /* Make the GIF smaller on mobile */
+          }
+        }
+      }
+
+      /* GIF positioned at the bottom-right corner */
+      .corner-gif {
+        margin: 40px;
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        width: 200px; /* Adjust GIF size */
+        height: auto;
+        z-index: 1000;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="box">
+      <h2 id="construction">⚠️ Under Construction...</h2>
+      <p class="typing" id="typewriter-text"></p>
+    </div>
+
+    <!-- Add your GIF below -->
+    <a
+      class="corner-gif"
+      href="https://www.animatedimages.org/cat-under-construction-695.htm"
+      ><img
+        src="https://www.animatedimages.org/data/media/695/animated-under-construction-image-0050.gif"
+        border="0"
+        alt="animated-under-construction-image-0050"
+    /></a>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      // Typing text for the paragraph
+      const message =
+        "We're working hard to get things up and running. Please check back soon!";
+      let index = 0;
+
+      function typeText() {
+        if (index < message.length) {
+          document.getElementById("typewriter-text").innerHTML +=
+            message.charAt(index);
+          index++;
+          setTimeout(typeText, 50); // Adjust typing speed here
+        }
+      }
+
+      // Trigger the typing animation once the page loads
+      window.onload = function () {
+        setTimeout(typeText, 1000); // Delay before typing starts
+      };
+    </script>
+  </body>
 </html>
