--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -18,20 +18,15 @@
             <img src="/assets/images/profile.png" alt="My profile photo" />
         </div>
         <p>
-            I'm Chinmay Patil, a B.Tech student in Information Technology at Walchand College of Engineering, Sangli. I'm a Web Developer, Competitive Programmer, and Machine Learning Enthusiast.
+            I'm Chinmay Patil, a B.Tech student in Information Technology at
+            Walchand College of Engineering, Sangli. I'm a Web Developer,
+            Competitive Programmer, and Machine Learning Enthusiast.
         </p>
     </div>
 
-    <div class="card" style="width: 500px; background-color: #332851; padding: 20px; border: 1px solid rgb(179, 132, 206); margin: 12px auto; border-radius: 10px;">
-        <h2>My Skills</h2>
-        <ul>
-            <li>MERN stack</li>
-            <li>Android Development</li>
-            <li>C++</li>
-            <li>Java</li>
-            <li>Kotlin</li>
-            <li>Python</li>
-        </ul>
+    <div class="horizontal-div">
+        <div class="horizontal-div-item">Java</div>
+        <div class="horizontal-div-item">C++</div>
     </div>
 
     <div class="box">
@@ -39,7 +34,9 @@
         <ol>
             <li>Android Project</li>
             <p>
-                Created an Android Application for our college, the 'Attendance System'. It integrates real-time changes from the Moodle database using the Moodle Web Services API.
+                Created an Android Application for our college, the 'Attendance
+                System'. It integrates real-time changes from the Moodle database
+                using the Moodle Web Services API.
             </p>
         </ol>
     </div>
@@ -47,7 +44,9 @@
     <div class="box">
         <h2>Contact Me</h2>
         <ul>
-            <li><a href="mailto:chinmaydpatil09@gmail.com">chinmaydpatil09@gmail.com</a></li>
+            <li>
+                <a href="mailto:chinmaydpatil09@gmail.com">chinmaydpatil09@gmail.com</a>
+            </li>
             <li>Walchand College of Engineering, Sangli</li>
         </ul>
     </div>
@@ -55,13 +54,17 @@
     <div class="box">
         <div class="link-box">
             <a href="https://www.linkedin.com/in/chinmaypatil462/" class="btn btn-primary btn-custom" title="LinkedIn">
-                <img class="image-logo" src="/assets/images/linkedin.png" alt="LinkedIn" width="20" height="20" /> LinkedIn
+                <img class="image-logo" src="/assets/images/linkedin.png" alt="LinkedIn" width="20" height="20" />
+                LinkedIn
             </a>
             <a href="https://github.com/ChinmayOnGithub" class="btn btn-dark btn-custom" title="GitHub">
-                <img class="image-logo" src="/assets/images/github_black_logo_icon_147128.png" alt="GitHub" width="20" height="20" /> GitHub
+                <img class="image-logo" src="/assets/images/github_black_logo_icon_147128.png" alt="GitHub" width="20"
+                    height="20" />
+                GitHub
             </a>
             <a href="https://leetcode.com/u/chinmaydpatil09/" class="btn btn-warning btn-custom" title="Leetcode">
-                <img class="image-logo" src="/assets/images/leetcode.png" alt="Leetcode" width="20" height="20" /> Leetcode
+                <img class="image-logo" src="/assets/images/leetcode.png" alt="Leetcode" width="20" height="20" />
+                Leetcode
             </a>
         </div>
     </div>
