--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,7 +20,7 @@
         <p>
             I'm Chinmay Patil, a B.Tech student in Information Technology at
             Walchand College of Engineering, Sangli. I'm a Web Developer,
-            Competitive Programmer, and Machine Learning Enthusiast.
+            Competitive Programmer, and Machine Learning Enthusiast!
         </p>
     </div>
 
