--- a/my_work/hitesh chaudhary/login.html
+++ b/my_work/hitesh chaudhary/login.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+
+        }
+
         body {
             font-family: Arial, Helvetica, sans-serif;
             background-color: #1a1a1a;
@@ -26,12 +33,14 @@
 
         h2 {
             text-align: center;
+
         }
 
         form {
             display: flex;
             flex-direction: column;
             align-items: center;
+
         }
 
         input {
@@ -39,6 +48,7 @@
             padding: 8px;
             border: none;
             border-radius: 8px;
+
         }
 
         button {
