--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img src="../../assets/images/giphy.webp" alt="company emote" class="logo">
+            <img src="https://i.ibb.co/bNB431J/raccoon-dance.gif" alt="company emote" class="logo">
             <h1>Coming Soon!</h1>
             <p>We are preparing hard to bring something amazing! Stay tuned</p>
 
