--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h1>Coming Soon!</h1>
             <p>We are preparing hard to bring something amazing! Stay tuned</p>
 
-            <form id="fill_form">
+            <!-- <form id="fill_form">
                 <input placeholder="Enter your email" type="email" name="email" id="input_email">
                 <button type="submit">submit</button>
-            </form>
+            </form> -->
 
         </div>
     </div>
