--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,74 +5,79 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chinmay Patil</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/styles/portfolio.css" />
 </head>
 
-<body>
-    <h1>Welcome to My Website</h1>
+<body class="flex justify-center min-h-screen bg-cover bg-no-repeat"
+    style="background: rgb(16, 2, 24) url('../images/bg_image.jpg') center/cover; color: #ebebeb; font-family: 'Courier New', monospace;">
 
-    <div class="box">
-        <div class="circle">
-            <img src="/assets/images/profile.png" alt="My profile photo" />
-        </div>
-        <p>
-            I'm Chinmay Patil, a B.Tech student in Information Technology at
-            Walchand College of Engineering, Sangli. I'm a Web Developer,
-            Competitive Programmer, and Machine Learning Enthusiast!
-        </p>
+    <div class="absolute md:inline-block hidden top-0 left-0 h-20 w-fit z-10">
+        <h1>Chinmay Patil</h1>
+
     </div>
 
-    <div class="horizontal-div">
-        <div class="horizontal-div-item">Java</div>
-        <div class="horizontal-div-item">C++</div>
-    </div>
+    <main class="context flex flex-col md:w-1/2 w-full justify-center">
+        <h1 class="text-center text-4xl my-5">Welcome to My Website</h1>
 
-
-    <div class="box">
-        <h2>My Projects</h2>
-        <ol>
-            <li>Android Project</li>
+        <div
+            class="box w-11/12 max-w-xl bg-opacity-80 bg-gray-800 p-5 border border-purple-400 mx-auto rounded-lg shadow-lg">
+            <h1 class="block-heading text-2xl text-left mb-4">About</h1>
             <p>
-                Created an Android Application for our college, the 'Attendance
-                System'. It integrates real-time changes from the Moodle database
-                using the Moodle Web Services API.
+                I'm Chinmay Patil, a B.Tech student in Information Technology at
+                Walchand College of Engineering, Sangli. I'm a Web Developer,
+                Competitive Programmer, and Machine Learning Enthusiast!
             </p>
-        </ol>
-    </div>
-
-    <div class="box">
-        <h2>Contact Me</h2>
-        <ul>
-            <li>
-                <a href="mailto:chinmaydpatil09@gmail.com">chinmaydpatil09@gmail.com</a>
-            </li>
-            <li>Walchand College of Engineering, Sangli</li>
-        </ul>
-    </div>
-
-    <div class="box">
-        <div class="link-box">
-            <a href="https://www.linkedin.com/in/chinmaypatil462/" class="btn btn-primary btn-custom" title="LinkedIn">
-                <img class="image-logo" src="/assets/images/linkedin.png" alt="LinkedIn" width="20" height="20" />
-                LinkedIn
-            </a>
-            <a href="https://github.com/ChinmayOnGithub" class="btn btn-dark btn-custom" title="GitHub">
-                <img class="image-logo" src="/assets/images/github_black_logo_icon_147128.png" alt="GitHub" width="20"
-                    height="20" />
-                GitHub
-            </a>
-            <a href="https://leetcode.com/u/chinmaydpatil09/" class="btn btn-warning btn-custom" title="Leetcode">
-                <img class="image-logo" src="/assets/images/leetcode.png" alt="Leetcode" width="20" height="20" />
-                Leetcode
-            </a>
         </div>
-    </div>
+
+        <div
+            class="box w-11/12 max-w-xl bg-opacity-80 bg-gray-800 p-5 border border-purple-400 mx-auto rounded-lg shadow-lg">
+            <h2 class="text-2xl mb-4">My Projects</h2>
+            <ol class="list-decimal list-inside">
+                <li>Android Project</li>
+                <p>
+                    Created an Android Application for our college, the 'Attendance
+                    System'. It integrates real-time changes from the Moodle database
+                    using the Moodle Web Services API.
+                </p>
+            </ol>
+        </div>
+
+        <div
+            class="box w-11/12 max-w-xl bg-opacity-80 bg-gray-800 p-5 border border-purple-400 mx-auto rounded-lg shadow-lg">
+            <h2 class="text-2xl mb-4">Contact Me</h2>
+            <ul class="list-none">
+                <li>
+                    <a href="mailto:chinmaydpatil09@gmail.com"
+                        class="text-yellow-400 hover:underline">chinmaydpatil09@gmail.com</a>
+                </li>
+                <li>Walchand College of Engineering, Sangli</li>
+            </ul>
+        </div>
+
+        <div
+            class="box w-11/12 max-w-xl bg-opacity-80 bg-gray-800 p-5 border border-purple-400 mx-auto rounded-lg shadow-lg">
+            <div class="link-box flex gap-5 justify-center items-center mt-4">
+                <a href="https://www.linkedin.com/in/chinmaypatil462/"
+                    class="btn-custom flex items-center text-blue-500 hover:underline" title="LinkedIn">
+                    <img class="image-logo mr-2" src="/assets/images/linkedin.png" alt="LinkedIn" />
+                    LinkedIn
+                </a>
+                <a href="https://github.com/ChinmayOnGithub"
+                    class="btn-custom flex items-center text-white hover:underline" title="GitHub">
+                    <img class="image-logo mr-2" src="/assets/images/github_black_logo_icon_147128.png" alt="GitHub" />
+                    GitHub
+                </a>
+                <a href="https://leetcode.com/u/chinmaydpatil09/"
+                    class="btn-custom flex items-center text-yellow-500 hover:underline" title="Leetcode">
+                    <img class="image-logo mr-2" src="/assets/images/leetcode.png" alt="Leetcode" />
+                    Leetcode
+                </a>
+            </div>
+        </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
